<resources>
    <string name="app_name">Voice Select</string>
    <string name="voice_select_application_label">Voice Select</string>
    <string name="main_activity_label">Voice Select</string>
    <string name="main_request_permissions_label">Grant all permissions to continue.</string>
    <string name="main_request_permissions_button">REQUEST PERMISSIONS</string>
    <string name="main_settings_permissions_label">In order to continue select the \'Settings\'
        button below, then \'Permissions\'.
        \n\n Grant all permissions under \'Not allowed\', and relaunch the application.</string>
    <string name="main_settings_permissions_button">SETTINGS</string>
    <string name="login_activity_label">User Login</string>
    <string name="login_password_title">Enter PIN</string>
    <string name="login_select_user_prompt">Say your user name or use your connected device to login.</string>
    <string name="login_user_label">User:</string>
    <string name="login_enter_pin_prompt">Say your PIN then \'enter\' to continue.</string>
    <string name="login_enter_pin_label">PIN:</string>
    <string name="menu_activity_label">Menu</string>
    <string name="menu_start_activity_button">START</string>
    <string name="menu_resume_activity_button">RESUME</string>
    <string name="menu_recall_activity_button">RECALL</string>
    <string name="menu_configure_activity_button">CONFIGURE</string>
    <string name="menu_settings_activity_button">SETTINGS</string>
    <string name="menu_change_user_activity_button">CHANGE USER</string>
    <string name="menu_about_activity_button">ABOUT IRISTICK</string>
    <string name="menu_layout_label">LAYOUT:</string>
    <string name="menu_layout_value">No Layouts</string>
    <string name="data_gathering_activity_label">Data Gathering</string>
    <string name="data_gathering_header_scroll_description">Scroll horizontally through columns</string>
    <string name="data_gathering_rv_scroll_description">Scroll horizontally through entered data</string>
    <string name="data_gathering_entry_scroll_description">Scroll horizontally through
        values that can be added to a row</string>
    <string name="data_gathering_index_label">#</string>
    <string name="data_gathering_comment_label">CMT</string>
    <string name="data_gathering_comment_description">Open comment entry dialogue</string>
    <string name="data_gathering_photo_label">PIC</string>
    <string name="data_gathering_photo_description">Open the camera</string>
    <string name="data_gathering_end_description">End the totalSession</string>
    <string name="data_gathering_repeat_button">REPEAT</string>
    <string name="data_gathering_delete_button">DEL</string>
    <string name="data_gathering_reset_button">RESET</string>
    <string name="data_gathering_save_button">SAVE</string>
    <string name="data_gathering_session_label">Session:</string>
    <string name="data_gathering_entries_label">Entries:</string>
    <string name="data_gathering_end_button">END</string>
    <string name="data_gathering_end_session_dialogue">Mark this session as finished?</string>
    <string name="data_gathering_hud_end_of_row">END</string>
    <string name="comment_dialogue_edit_comment">Edit Comment</string>
    <string name="comment_dialogue_enter_label">Enter</string>
    <string name="comment_dialogue_cancel_label">Cancel</string>
    <string name="comment_dialogue_add_label">ADD</string>
    <string name="comment_dialogue_clr_label">CLEAR</string>
    <string name="comment_dialogue_can_label">CANCEL</string>
    <string name="comment_dialogue_ent_label">ENTER</string>
    <string name="recall_activity_label">Recall</string>
    <string name="recall_unfinished_switch">Unfinished</string>
    <string name="recall_search_box_hint">Search:</string>
    <string name="recall_status_label">Status:</string>
    <string name="recall_status_available">Available</string>
    <string name="recall_status_finished">Finished</string>
    <string name="recall_dialogue_open_button">OPEN</string>
    <string name="recall_dialogue_export_button">EXPORT</string>
    <string name="recall_dialogue_delete_button">DELETE</string>
    <string name="recall_hud_text">Use your connected device to recall a session.</string>
    <string name="config_activity_label">Configure</string>
    <string name="config_users_activity_button">USERS</string>
    <string name="config_user_preferences_activity_button">USER PREFERENCES</string>
    <string name="config_columns_activity_button">COLUMNS</string>
    <string name="config_column_values_activity_button">VALUES</string>
    <string name="config_layouts_activity_button">LAYOUTS</string>
    <string name="config_users_activity_label">Configure Users</string>
    <string name="user_new_button">NEW</string>
    <string name="user_reset_button">RESET</string>
    <string name="user_save_button">SAVE</string>
    <string name="user_delete_button">DEL</string>
    <string name="user_import_button">IMPORT</string>
    <string name="user_export_button">EXPORT</string>
    <string name="user_name_label">Name</string>
    <string name="user_name_value">Enter user name</string>
    <string name="user_prefix_label">Session Prefix</string>
    <string name="user_prefix_value">Enter session prefix</string>
    <string name="user_export_code_label">Code</string>
    <string name="user_export_code_value">Enter export code</string>
    <string name="user_password_label">PIN</string>
    <string name="user_password_value">Enter PIN</string>
    <string name="user_admin_Label">Admin</string>
    <string name="user_primary_Label">Default\nSpoken</string>
    <string name="config_user_preferences_activity_label">Configure Preferences</string>
    <string name="feedback_user_label">User:</string>
    <string name="preferences_auto_save_label">Auto Save</string>
    <string name="preferences_abbreviate_label">Abbreviate</string>
    <string name="feedback_enabled_label">Feedback</string>
    <string name="feedback_enabled_label_content_description">Enable Feedback</string>
    <string name="feedback_queue_label">Flush Queue</string>
    <string name="feedback_queue_label_content_description">Flush Queue</string>
    <string name="feedback_rate_label">Speech Rate</string>
    <string name="feedback_pitch_label">Speech Pitch</string>
    <string name="feedback_sample_text_hint">Sample Text</string>
    <string name="feedback_sample_text_placeholder">Enter sample text</string>
    <string name="feedback_test_button">TEST FEEDBACK</string>
    <string name="feedback_reset_button">RESET</string>
    <string name="feedback_default_button">DEFAULT</string>
    <string name="feedback_save_button">SAVE</string>
    <string name="config_columns_activity_label">Configure Columns</string>
    <string name="column_new_button">NEW</string>
    <string name="column_reset_button">RESET</string>
    <string name="column_save_button">SAVE</string>
    <string name="column_delete_button">DEL</string>
    <string name="column_import_button">IMPORT</string>
    <string name="column_export_button">EXPORT</string>
    <string name="column_name_label">Name</string>
    <string name="column_name_value">Enter column name</string>
    <string name="column_name_code_label">Abbreviation</string>
    <string name="column_name_code_value">Enter column abbreviation</string>
    <string name="column_export_label">Code</string>
    <string name="column_export_value">Enter export code</string>
    <string name="column_spoken_label">Spoken</string>
    <string name="column_spoken_value">Enter column spoken</string>
    <string name="config_values_activity_label">Configure Values</string>
    <string name="column_value_new_button">NEW</string>
    <string name="column_value_reset_button">RESET</string>
    <string name="column_value_save_button">SAVE</string>
    <string name="column_value_delete_button">DEL</string>
    <string name="column_value_import_button">IMPORT</string>
    <string name="column_value_export_button">EXPORT</string>
    <string name="column_value_name_label">Value</string>
    <string name="column_value_name_value">Enter value</string>
    <string name="column_value_name_code_label">Abbreviation</string>
    <string name="column_value_name_code_value">Enter value abbreviation</string>
    <string name="column_value_export_label">Code</string>
    <string name="column_value_export_value">Enter export code</string>
    <string name="column_value_spoken_label">Spoken</string>
    <string name="column_value_spoken_value">Enter value spoken</string>
    <string name="column_value_letters_button">LETTERS</string>
    <string name="column_value_numbers_button">NUMBERS</string>
    <string name="column_value_number_range_label">Create Number Range</string>
    <string name="column_value_letter_range_label">Create Letter Range</string>
    <string name="column_values_min_label">Min:</string>
    <string name="column_values_max_Label">Max:</string>
    <string name="column_values_multiples_label">Multiple Of:</string>
    <string name="column_values_enter_label">Enter</string>
    <string name="column_values_cancel_label">Cancel</string>
    <string name="config_layout_activity_label">Configure Layout</string>
    <string name="layout_name_label">Name</string>
    <string name="layout_name_value">Enter layout name</string>
    <string name="layout_export_code_label">Code</string>
    <string name="layout_export_code_value">Enter export code</string>
    <string name="layout_comment_required_label">Comment</string>
    <string name="layout_picture_required_label">Picture</string>
    <string name="layout_column_name_label">Column Name</string>
    <string name="layout_column_enabled_label">Enabled</string>
    <string name="layout_column_enabled_yes">Yes</string>
    <string name="layout_column_enabled_no">No</string>
    <string name="layout_column_position_label">Position</string>
    <string name="layout_column_enable_label">Enable</string>
    <string name="layout_column_position_description">Select position</string>
    <string name="config_hud_text">Use your connected device to complete configuration.</string>
    <string name="settings_entry_mode_label">Voice Entry Mode:</string>
    <string name="settings_chained_mode">Combined</string>
    <string name="settings_step_mode">Step-By-Step</string>
    <string name="settings_free_mode">Free Form</string>
    <string name="settings_photo_label">Photo Settings:</string>
    <string name="settings_print_name_on_picture">Name</string>
    <string name="settings_print_time_on_picture">Time</string>
    <string name="settings_print_gps_coordinates_on_picture">GPS</string>
    <string name="settings_export_label">Export Settings:</string>
    <string name="settings_csv">CSV</string>
    <string name="settings_json">JSON</string>
    <string name="settings_excel">XLSX</string>
    <string name="settings_import">Import</string>
    <string name="settings_export">Export</string>
    <string name="settings_hud_text">Use your connected device to manage application settings.</string>
    <string name="footer_layout_label">Layout:</string>
    <string name="footer_layout_value">Layout Value</string>
    <string name="footer_project_label">Project:</string>
    <string name="footer_project_value">Project Value</string>
    <string name="footer_session_label">Session:</string>
    <string name="footer_session_value">Session Value</string>
    <string name="footer_user_label">User:</string>
    <string name="footer_user_value">User Name</string>
    <string name="footer_version_value">Application Version</string>
    <string name="import_dialogue_label">Current settings may be lost.</string>
    <string name="yes_no_dialogue_yes_button">YES</string>
    <string name="yes_no_dialogue_no_button">NO</string>
    <string name="inches">Inches</string>
    <string name="number">NUMBER</string>
    <string name="comment_label">Comment:</string>
</resources>