<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/userTopButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/userNewButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.88"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/user_new_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/userResetButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.12"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/user_reset_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/userSaveButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/user_save_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/userDeleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/user_delete_button"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userEditTextLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/userTopButtonsLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/user_name_label"
            app:placeholderText="@string/user_name_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPrefixInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/user_prefix_label"
            app:placeholderText="@string/user_prefix_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPrefixEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userExportCodeInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:hint="@string/user_export_code_label"
            app:placeholderText="@string/user_export_code_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userExportCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userPermissionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/double_margin"
        app:layout_constraintTop_toBottomOf="@id/userEditTextLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPasswordInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/user_password_label"
            app:placeholderText="@string/user_password_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/userAdminSwitch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:paddingStart="@dimen/double_padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/user_admin_Label"
            android:textSize="@dimen/medium_text_size"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/userPrimarySwitch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:paddingStart="@dimen/double_padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/user_primary_Label"
            android:textSize="@dimen/medium_text_size"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/double_margin"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:background="@drawable/recycler_view_background"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/userBottomButtonsLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPermissionsLinearLayout">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/userBottomButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/userImportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/user_import_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/userExportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/user_export_button"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>