<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutTopButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/layoutNewButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.88"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/column_new_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/layoutResetButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.12"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/column_reset_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/layoutSaveButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/column_save_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/layoutDeleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/column_delete_button"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/columnEditTextLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/layoutTopButtonsLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/columnNameInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/column_name_label"
            app:placeholderText="@string/column_name_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/columnNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/columnNameCodeInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/column_name_code_label"
            app:placeholderText="@string/column_name_code_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/columnNameCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/columnExportCodeInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:hint="@string/column_export_label"
            app:placeholderText="@string/column_export_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/columnExportCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapCharacters"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutColumnLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/double_margin"
        app:layout_constraintTop_toBottomOf="@id/columnEditTextLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNameInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:hint="@string/column_spoken_label"
            app:placeholderText="@string/column_spoken_value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/layoutNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:textSize="@dimen/medium_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/layoutSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/double_margin"
            android:layout_weight="0.75"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/columnRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/double_margin"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:background="@drawable/recycler_view_background"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/layoutBottomButtonsLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutColumnLinearLayout">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layoutBottomButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/layoutImportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/column_import_button"
            android:textSize="@dimen/large_text_size"/>

        <Button
            android:id="@+id/layoutExportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/column_export_button"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>