<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/requestPermissionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_two_x_margin"
        android:gravity="center"
        android:text="@string/main_request_permissions_label"
        android:textSize="@dimen/xl_text_size"
        app:layout_constraintBottom_toTopOf="@+id/requestPermissionsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/requestPermissionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_request_permissions_button"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/settingsPermissionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_two_x_margin"
        android:paddingLeft="@dimen/four_x_padding"
        android:paddingRight="@dimen/four_x_padding"
        android:gravity="center"
        android:text="@string/main_settings_permissions_label"
        android:textSize="@dimen/xl_text_size"
        app:layout_constraintBottom_toTopOf="@+id/settingsPermissionsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/settingsPermissionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_settings_permissions_button"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>